MT#4909 Fix french menu style
It was too big, so wasn't displayed properly

(cherry picked from commit 044096f027e64b78e1b247ed75e76ed2291ccfff)

--- a/root/css/style.css
+++ b/root/css/style.css
@@ -183,6 +183,9 @@ body.hp {
 	color: #8B949A;
 	text-transform: uppercase;
 }
+#menu.language_fr li a {
+	font-size: 10px;
+}
 #menu li a {
 	color: #8B949A;
 	float: left;
